[gd_scene format=3 uid="uid://by5ip7h8iaind"]

[ext_resource type="Script" uid="uid://2lbdeh7cvg23" path="res://BlockManager/Scripts/movement_block.gd" id="1_4whwm"]
[ext_resource type="Texture2D" uid="uid://burolvqclkyuu" path="res://Sprites/Blocks/MOVE_block.png" id="1_bph5w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u28jr"]
size = Vector2(2, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4whwm"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ta8l8"]
size = Vector2(10, 7)

[node name="MoveBlock" type="Node2D" unique_id=2139020209]
script = ExtResource("1_4whwm")

[node name="MoveBlock" type="Sprite2D" parent="." unique_id=845344658]
position = Vector2(14, 5)
texture = ExtResource("1_bph5w")

[node name="Button" type="Button" parent="." unique_id=758523953]
modulate = Color(1, 1, 1, 0)
offset_left = -2.0
offset_right = 31.0
offset_bottom = 10.0
action_mode = 0

[node name="Center" type="Node2D" parent="." unique_id=480502077]
position = Vector2(14, 5)

[node name="ConnectToLastDetector" type="Area2D" parent="." unique_id=506419226 groups=["ConnectFrom"]]
position = Vector2(-2, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectToLastDetector" unique_id=1617258313]
z_index = 2
y_sort_enabled = true
shape = SubResource("RectangleShape2D_u28jr")

[node name="ConnectToNextDetector" type="Area2D" parent="." unique_id=2097304924 groups=["ConnectTo", "MoveBlock"]]
position = Vector2(29, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectToNextDetector" unique_id=1449045139]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_4whwm")

[node name="ConnectNextBlockDetector" type="Area2D" parent="." unique_id=785466362 groups=["ConnectAbove"]]
position = Vector2(0, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ConnectNextBlockDetector" unique_id=213961240]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_ta8l8")

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Button" to="." method="_on_button_button_up"]
[connection signal="area_entered" from="ConnectToLastDetector" to="." method="_on_connect_to_last_detector_area_entered"]
[connection signal="area_exited" from="ConnectToLastDetector" to="." method="_on_connect_to_last_detector_area_exited"]
[connection signal="area_entered" from="ConnectToNextDetector" to="." method="_on_connect_to_next_detector_area_entered"]
[connection signal="area_exited" from="ConnectToNextDetector" to="." method="_on_connect_to_next_detector_area_exited"]
